--- a/src/templates/hole.html
+++ b/src/templates/hole.html
@@ -58,11 +58,11 @@
             <td>{{ i|e + 1 }}</td>
             <td><a href="{{ urlFor('user', {"userId": submission.user._id}) }}">{{ submission.user.username|e }}</a></td>
             <td>
-              {% if submission.user._id == user._id or user.isAdmin or hole.hasEnded %}
+              {% if submission.viewableByUser %}
                 <a href="{{ urlFor('submission', {"holeId": hole._id, "submissionId": submission._id}) }}">
               {% endif %}
               {{ submission.length|e }}
-              {% if submission.user._id == user._id or user.isAdmin or hole.hasEnded %}
+              {% if submission.viewableByUser %}
                 </a>
               {% endif %}
             </td>
@@ -83,11 +83,11 @@
         <tr class="{% if submission.result %}success{% else %}error{% endif %}">
           <td><a href="{{ urlFor('user', {"userId": submission.user._id}) }}">{{ submission.user.username|e }}</a></td>
           <td>
-            {% if submission.user._id == user._id or user.isAdmin or hole.hasEnded %}
+            {% if submission.viewableByUser %}
               <a href="{{ urlFor('submission', {"holeId": hole._id, "submissionId": submission._id}) }}">
             {% endif %}
             {{ submission.length|e }}
-            {% if submission.user._id == user._id or user.isAdmin or hole.hasEnded%}
+            {% if submission.viewableByUser %}
               </a>
             {% endif %}
           </td>
