--- a/src/templates/submission.html
+++ b/src/templates/submission.html
@@ -4,7 +4,7 @@
   <h2><a href="{{ urlFor('hole', {"holeId": hole._id}) }}">{{ hole.title|e }}</a></h2>
   <dl class="dl-horizontal">
     <dt>Source Code:</dt>
-    <dd><pre>{{ submission.code|e }}</pre></dd>
+    <dd><pre>{{ submission.code }}</pre></dd>
     <dt>Raw Source Code:</dt>
     <dd><pre>{{ submission.rawCode|e }}</pre></dd>
     <dt>Output:</dt>
