--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -24,5 +24,7 @@
       <div class="alert alert-error">{{ flash.error }}</div>
     {% endif %}
     <div class="container">{% block content %}{% endblock %}</div>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
