Switch to a fluid view.
This will help make things fit better on some screens.

--- a/src/templates/hole.html
+++ b/src/templates/hole.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}{{ hole.title|e }}{% endblock %}
 {% block content %}
-  <div class="row">
+  <div class="row-fluid">
     <div class="span7">
       <h2>{{ hole.title|e }}</h2>
       <dl class="dl-horizontal">
