--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -16,7 +16,7 @@
     {% endif %}
   </div>
 
-  <div class="row">
+  <div class="row-fluid">
     <div class="span4">
       <h2>Scoreboard</h2>
       <table class="table table-hover">
