--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -2,7 +2,7 @@
 {% block title %}{{ viewUser.username|e }}{% endblock %}
 {% block content %}
   <h2>{{ viewUser.username|e }}</h2>
-  <div class="row">
+  <div class="row-fluid">
     <div class="span6">
       <h3>Scoreboard</h3>
       <table class="table table-hover">
