--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -23,7 +23,7 @@
     {% if flash.error %}
       <div class="alert alert-error">{{ flash.error }}</div>
     {% endif %}
-    <div class="container">{% block content %}{% endblock %}</div>
+    <div class="container-fluid">{% block content %}{% endblock %}</div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="/script.js"></script>
   </body>
