Add text clarifying empty tables when there are no submissions.
Before the first submission for a hole or for a user, the tables on
various pages could be empty.  Instead of having an empty table, add one
row stating that there are no submissions.

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -31,6 +31,8 @@
             <td><a href="{{ urlFor('user', {"userId": user._id}) }}">{{ user.username|e }}</a></td>
             <td>{{ user.stats.score|e }}</td>
           </tr>
+        {% else %}
+          <tr><td colspan="3">No submissions</td></tr>
         {% endfor %}
       </table>
     </div>
@@ -60,6 +62,8 @@
             <td>{{ submission.score|e }}</td>
             <td>{{ submission.timestampFormatted|e }}</td>
           </tr>
+        {% else %}
+          <tr><td colspan="5">No submissions</td></tr>
         {% endfor %}
       </table>
     </div>
