Make specification a php string rather than separate fields.
It's far easier to manage and create the specification when it's
identical to what would be placed in the bizgolf repository as a hole.

--- a/src/templates/new-hole.html
+++ b/src/templates/new-hole.html
@@ -11,22 +11,7 @@
       </div>
       <div class="span1"><strong>OR</strong></div>
       <div class="span3">
-        <input type="text" name="constantName" placeholder="Constant Name" />
-        <input type="text" name="disabledFunctionality" placeholder="Disabled Functionality (CSV)" />
-        <div>
-          <label for="constantValuesIsAFunction" class="checkbox">
-            <input type="checkbox" name="constantValuesIsAFunction" id="constantValuesIsAFunction" /> Constant Values Is A Function
-          </label>
-        </div>
-        <textarea name="constantValues" placeholder="Constant Values (Function or CSV)" class="input-xxlarge" rows="8"></textarea>
-        <input type="text" name="trim" placeholder="Trim" />
-        <div>
-          <label for="sampleIsAFunction" class="checkbox">
-            <input type="checkbox" name="sampleIsAFunction" id="sampleIsAFunction" /> Sample Is A Function
-          </label>
-        </div>
-        <input type="text" name="sampleArguments" placeholder="Sample Arguments" />
-        <textarea name="specification-sample" placeholder="Sample (Function or String)" class="input-xxlarge" rows="8"></textarea>
+        <textarea name="specification" placeholder="Hole specification" class="input-xxlarge" rows="8"></textarea>
       </div>
     </div>
   </div>
