--- a/src/templates/submission.html
+++ b/src/templates/submission.html
@@ -7,6 +7,8 @@
     <dd><pre>{{ submission.code }}</pre></dd>
     <dt>Raw Source Code:</dt>
     <dd><pre>{{ submission.rawCode|e }}</pre></dd>
+    <dt>Inverted Code:</dt>
+    <dd><pre>{{ submission.invertedCode|e }}</pre></dd>
     <dt>Output:</dt>
     <dd><pre>{{ submission.output|e }}</pre></dd>
     <dt>Expected:</dt>
