--- a/src/templates/submission.html
+++ b/src/templates/submission.html
@@ -17,8 +17,10 @@
     <dd><pre>{{ submission.diff }}</pre></dd>
     <dt>Error:</dt>
     <dd><pre>{{ submission.stderr|e }}</pre></dd>
+    {% if submission.constantName %}
     <dt>Constant:</dt>
     <dd><pre>{{ submission.constantName|e }}={{ submission.constantValue|e }}</pre></dd>
+    {% endif %}
     <dt>Exit Status:</dt>
     <dd>{{ submission.exitStatus|e }}</dd>
     <dt>Length:</dt>
