Use html to markup inverted text.
This works much better.  It's easier to read and doesn't have nearly as
many problems as the previous solution with weird cases.

--- a/src/templates/submission.html
+++ b/src/templates/submission.html
@@ -6,7 +6,7 @@
     <dt>Source Code:</dt>
     <dd><pre>{{ submission.code }}</pre></dd>
     <dt>Inverted Code:</dt>
-    <dd><pre>{{ submission.invertedCode|e }}</pre></dd>
+    <dd><pre>{{ submission.invertedCode }}</pre></dd>
     <dt>Output:</dt>
     <dd><pre>{{ submission.output|e }}</pre></dd>
     <dt>Expected:</dt>
